1998-07-26  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am (INCLUDES): added -I$(top_srcdir), since gsl_math.h
	is needed, and that is in the top level source directory.  This is
	necessary for using a separate build directory.

Tue Jul 14 12:39:30 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* nbinomial.c: added Negative Binomial distribution

	* bernoulli.c: added Bernoulli distribution

	* poisson.c (gsl_ran_poisson): fixed a serious bug in the unrolled
 	recursion which led to an incorrect result being returned for the
 	large t case. This shows the importance of tests that cover all
 	possible branches!!!

	* erlang.c (gsl_ran_erlang_pdf): renamed mu to a for consistency

Thu Jul  2 15:47:05 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added some extra distributions, lognormal.c gaussian.c
 	logistic.c pareto.c geometric.c erlang.c chisq.c weibull.c,
	although they aren't finished yet

Wed Jul  1 11:56:06 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* replace do { u = gsl_rng_uniform(r) } while (u == 0) by a direct
 	call to gsl_rng_uniform_pos.

Sun Jun 28 14:21:13 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* converted everything to work with rng style generators

Sun Apr 19 19:06:59 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* made the 'gsl-dist' programs just output a single column of
 	their random numbers (previously some of the programs printed both
 	the uniform variate and the transformed number)

	* got rid of the 'bench-' programs. We will have a full testing
 	suite soon.

	* renamed the installed programs from 'dist' to 'gsl-dist' so that
 	they don't overwrite anything, e.g. it's possible the user might
 	have other programs called 'gauss' or 'gamma' installed in
 	/usr/local

Sat Mar 21 16:09:16 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* laplace.c (gsl_ran_laplace): added a Laplace distribution
	(two-sided exponential)
	
	* lorentz.c (gsl_ran_lorentzian): added a Lorentz distribution
	
1998-01-30  Mark Galassi  <rosalia@cygnus.com>
