@@ -1,3 +1,8 @@
+Fri Jul 31 12:52:12 1998  Brian Gough  <bjg@vvv.lanl.gov>
+
+	* gsl_randist.h: renamed gsl_ran_two_sided_exponential to
+ 	gsl_ran_laplace
+
 1998-07-26  Mark Galassi  <rosalia@cygnus.com>
 
 	* Makefile.am (INCLUDES): added -I$(top_srcdir), since gsl_math.h
